implementatino of infinite loading and nprogress.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,9 @@
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 
+//nProgress
+@import "~nprogress/nprogress.css";
+
 
 $font-primary: 'Poppins',Arial, sans-serif;
 $primary: #f8b739;
