Added statement, some refactoring, some bug fixes etc.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -234,3 +234,13 @@ a[data-toggle="collapse"] {
 .fire{
     color:$fire !important;
 }
+
+.votearea{
+    .fas{
+        cursor: pointer;
+    }
+}
+
+.primary{
+  color:#f8b739
+}
